# FP-subrip

./: README.md  fpsub.py  fpsub.sh  main.py  pyproject.toml
fpsubrip/: main.py
